Supporting weather module.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -216,6 +216,17 @@ borders:
 
 
 #############################################
+###           WEATHER SETTINGS            ###
+#############################################
+
+
+weathers:
+  world:
+    world: "world"
+    weather: "SUNNY"
+
+
+#############################################
 ###                CYCLES                 ###
 #############################################
 
