--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -164,8 +164,8 @@ area-capture:
 
 # All the settings about the chat used during the waiting cycle.
 waiting-cycle-chat:
-  # Set 'true' if you want to allow players to send messages in the chat
-  # or else, set this value to 'false'.
+  # Enable / Disable the chat.
+  # Available values: true / false.
   enabled: true
   # The chat format. You can use the following placeholders:
   # - %player% -> The player's name.
@@ -176,8 +176,8 @@ waiting-cycle-chat:
 
 # All the settings about the chat used during a game.
 game-chat:
-  # Set 'true' if you want to allow players to send messages in the chat
-  # or else, set this value to 'false'.
+  # Enable / Disable the chat.
+  # Available values: true / false.
   enabled: true
   # The chat format. You can use the following placeholders:
   # - %player% -> The player's name.
@@ -189,12 +189,12 @@ game-chat:
 
 # All the settings about the team chat used during a game.
 team-chat:
-  # Set 'true' if you want to allow players to send messages in the chat
-  # or else, set this value to 'false'.
+  # Enable / Disable the chat.
+  # Available values: true / false.
   enabled: true
   # The prefix set before a message to indicate that it is a team message.
   # Must be a single character like '!' or '@' for example.
-  prefix: "@"
+  prefix: '@'
   # The chat format. You can use the following placeholders:
   # - %player% -> The player's name.
   # - %display_name% -> The player's display name.
@@ -205,8 +205,8 @@ team-chat:
 
 # All the settings about the spectator chat.
 spectator-chat:
-  # Set 'true' if you want to allow players to send messages in the chat
-  # or else, set this value to 'false'.
+  # Enable / Disable the chat.
+  # Available values: true / false.
   enabled: true
   # The chat format. You can use the following placeholders:
   # - %player% -> The player's name.
@@ -224,9 +224,10 @@ spectator-chat:
 combat-module:
   # The duration of a combat between two players. If a player disconnect
   # while he's in combat, he will be automatically killed.
+  # Available values: A number >= 0.
   combat-duration: 15
-  # Set 'true' if you want a player to be killed when he disconnects while
-  # being in combat or else set 'false'.
+  # Make a player to be killed when he disconnected while being in combat.
+  # Available values: true / false.
   die-on-combat-disconnection: true
 
 
@@ -235,6 +236,39 @@ combat-module:
 #############################################
 
 
+# This section contains all the settings about world borders. To add a new
+# border for a specific world, you must use the following format:
+#
+# An id for the border in config. Use what you want.
+# my-world-border:
+#  # The center of the border (optional).
+#  # Default value: (0,0).
+#  center:
+#    x: 0
+#    y: 0
+#  # The size of the border (optional).
+#  # Available values: A positive number.
+#  # Default value: max border size.
+#  size: 1000
+#  # The number of damages of the border (optional).
+#  # Available values: A positive number.
+#  # Default value: 0.2.
+#  damages: 5
+#  # The distance for which a player doesn't take damages when he's outside of the border.
+#  # Available values: A positive number.
+#  # Default value: 5.
+#  safe-zone-distance: 10
+#  # The warning time of the border.
+#  # Available values: A positive number.
+#  # Default value: 15
+#  warning-time: 30
+#  # The warning distance of the border. When a player is closest the border, a red border
+#  # will appear on his screen until he moves away.
+#  # Available values: A positive number.
+#  # Default value: 5
+#  warning-distance: 10
+#  # The world in which set the border.
+#  world: "my-world"
 borders:
   world-border:
     center:
